helm/src/koneksyon-api/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: koneksyonapi
  labels:
    app: koneksyon-api
    function: application
    es: ghcr
