helm/src/koneksyon-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: koneksyon-api
  namespace: koneksyonapi
spec:
  selector:
    app: koneksyon-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
